bluec-tests/tests/invalid/functions/call_expression_int.c
int main(void) {
    return (55)();
}